<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.technicjelle</groupId>
	<artifactId>BlueMapFloodgate</artifactId>
	<version>3.5</version>
	<packaging>jar</packaging>

	<name>BlueMapFloodgate</name>

	<description>A Minecraft Paper plugin and BlueMap addon that adds GeyserMC/floodgate support</description>
	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<url>https://github.com/TechnicJelle/BlueMapFloodgate</url>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<relocations>
						<relocation>
							<pattern>com.technicjelle.UpdateChecker</pattern>
							<shadedPattern>com.technicjelle.bluemapfloodgate.shadow.UpdateChecker</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.technicjelle.MCUtils</pattern>
							<shadedPattern>com.technicjelle.bluemapfloodgate.shadow.MCUtils</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>com.technicjelle.bluemapfloodgate.shadow.bstats</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<repositories>
		<repository>
			<id>papermc-repo</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
		<repository>
			<id>bluecolored-releases</id>
			<name>BlueColored Repository</name>
			<url>https://repo.bluecolored.de/releases</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.technicjelle</groupId>
			<artifactId>UpdateChecker</artifactId>
			<version>2.5.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.technicjelle</groupId>
			<artifactId>MCUtils</artifactId>
			<version>2.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.17.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>de.bluecolored</groupId>
			<artifactId>bluemap-api</artifactId>
			<version>2.7.3</version>
		</dependency>
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.1.0</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>
